# MenuScan

./: .env.local.example  .gitattributes  .gitignore  .mailmap  .trivyignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  dev.ps1  docker-compose.yml  failed_log.txt  full_log.txt  run.ps1  skills-lock.json
app/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 001_create_mvp_schema.py  41766b8ca866_add_name_to_diningsession.py  7ac414652a61_merge_dev_and_feat_branches.py  7f1c6c9d2a4b_create_billing_schema.py  8a9b0c1d2e3f_add_dining_recommendation_schema.py  a1b2c3d4e5f7_add_user_delete_token_columns.py  a1f4c7e9b2d5_add_split_people_count_to_bills.py  a3c9e1d4b7f2_add_scan_source_files.py  (+18 more)
app/scripts/: diagnose_auth.py  diagnose_feed.py
app/src/: __init__.py  router.py
app/src/core/: config.py  (+5 more)
app/tests/: conftest.py  test_advisor_chat_api.py  test_application.py  test_auth_lifecycle.py  test_billing_service.py  test_config_secret_guard.py  test_database.py  test_database_integration.py  test_dining_api.py  test_email_adapter.py  test_exchange_rate.py  test_feed_recommend_endpoints.py  test_feed_recommend_scoring.py  test_food_enricher.py  test_gemini_translation.py  test_google_vision_ocr_adapter.py  test_health.py  test_llm_menu_parser.py  test_magic_link_api.py  test_magic_link_integration.py  test_magic_link_service.py  test_menu_api.py  test_menu_enrichment.py  test_menu_parser.py  test_menu_parser_fallback.py  test_menu_scan_storage.py  test_menu_table.py  test_menu_validity.py  test_ocr_contract.py  test_ocr_pipeline.py  test_ocr_quality.py  test_output_verifier.py  test_price_normalizer.py  test_rate_limit.py  test_scan_api.py  test_scan_get_api.py  test_scan_pipeline.py  test_scan_repository.py  test_scan_watchdog.py  test_translation_service.py  (+1 more)
(+424 files in other folders)
