[project]
name = "app"
version = "0.1.0"
description = "MenuScan Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "email-validator>=2.0.0",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.1.1",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
